Bug 326902 - Get default profile identity if none was found in the account passed to ForwardMessage (e.g. RSS accounts have no identity). r=bienvenu